emoji_window/emoji_window.h


typedef void (__stdcall *ButtonClickCallback)(int button_id, HWND parent_hwnd);
typedef void (__stdcall *MessageBoxCallback)(int confirmed);
typedef void (__stdcall *TAB_CALLBACK)(HWND hTabControl, int selectedIndex);
typedef void (__stdcall *MenuItemClickCallback)(int menu_id, int item_id);
typedef void (__stdcall *CheckBoxCallback)(HWND hCheckBox, BOOL checked);
typedef void (__stdcall *ProgressBarCallback)(HWND hProgressBar, int value);
typedef void (__stdcall *PictureBoxCallback)(HWND hPictureBox);
typedef void (__stdcall *RadioButtonCallback)(HWND hRadioButton, int group_id, BOOL checked);
typedef void (__stdcall *ListBoxCallback)(HWND hListBox, int index);
typedef void (__stdcall *ComboBoxCallback)(HWND hComboBox, int index);
typedef void (__stdcall *HotKeyCallback)(HWND hHotKey, int vk_code, int modifiers);
typedef void (__stdcall *ValueChangedCallback)(HWND hwnd);
enum TextAlignment {
    ALIGN_LEFT = 0,
    ALIGN_CENTER = 1,
    ALIGN_RIGHT = 2
};
enum GroupBoxVisualStyle {
    GROUPBOX_STYLE_OUTLINE = 0,
    GROUPBOX_STYLE_CARD = 1,
    GROUPBOX_STYLE_PLAIN = 2,
    GROUPBOX_STYLE_HEADER_BAR = 3
};
enum TabHeaderVisualStyle {
    TAB_HEADER_STYLE_LINE = 0,
    TAB_HEADER_STYLE_CARD = 1,
    TAB_HEADER_STYLE_CARD_PLAIN = 2,
    TAB_HEADER_STYLE_SEGMENTED = 3
};
    __declspec(dllexport) HWND __stdcall create_window_bytes(const unsigned char* title_bytes, int title_len, int x, int y, int width, int height);
    __declspec(dllexport) int __stdcall create_emoji_button_bytes(
        HWND parent,
        const unsigned char* emoji_bytes,
        int emoji_len,
        const unsigned char* text_bytes,
        int text_len,
        int x, int y, int width, int height,
        UINT32 bg_color
    );
    __declspec(dllexport) void __stdcall set_button_click_callback(ButtonClickCallback callback);
    __declspec(dllexport) void __stdcall set_message_loop_main_window(HWND hwnd);
    __declspec(dllexport) int __stdcall run_message_loop();
    __declspec(dllexport) void __stdcall show_message_box_bytes(
        HWND parent,
        const unsigned char* title_bytes,
        int title_len,
        const unsigned char* message_bytes,
        int message_len,
        const unsigned char* icon_bytes,
        int icon_len
    );
    __declspec(dllexport) void __stdcall show_confirm_box_bytes(
        HWND parent,
        const unsigned char* title_bytes,
        int title_len,
        const unsigned char* message_bytes,
        int message_len,
        const unsigned char* icon_bytes,
        int icon_len,
        MessageBoxCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateTabControl(
        HWND hParent,
        int x,
        int y,
        int width,
        int height
    );
    __declspec(dllexport) int __stdcall AddTabItem(
        HWND hTabControl,
        const unsigned char* title_bytes,
        int title_len,
        HWND hContentWindow  
    );
    __declspec(dllexport) void __stdcall SetTabCallback(
        HWND hTabControl,
        TAB_CALLBACK pCallback
    );
    __declspec(dllexport) BOOL __stdcall SelectTab(
        HWND hTabControl,
        int index
    );
    __declspec(dllexport) HWND __stdcall GetTabContentWindow(
        HWND hTabControl,
        int index
    );
    __declspec(dllexport) int __stdcall SetTabItemSize(
        HWND hTab,
        int width,
        int height
    );
    __declspec(dllexport) int __stdcall SetTabColors(
        HWND hTab,
        UINT32 selectedBg,
        UINT32 unselectedBg,
        UINT32 selectedText,
        UINT32 unselectedText
    );
    __declspec(dllexport) int __stdcall SetTabIndicatorColor(
        HWND hTab,
        UINT32 color
    );
    __declspec(dllexport) int __stdcall SetTabPadding(
        HWND hTab,
        int horizontal,
        int vertical
    );
    __declspec(dllexport) int __stdcall SetTabHeaderStyle(
        HWND hTab,
        int style
    );
    __declspec(dllexport) HWND __stdcall CreateMenuBar(
        HWND hWindow
    );
    __declspec(dllexport) int __stdcall MenuBarAddItem(
        HWND hMenuBar,
        const unsigned char* text_bytes,
        int text_len,
        int item_id
    );
    __declspec(dllexport) int __stdcall MenuBarAddSubItem(
        HWND hMenuBar,
        int parent_item_id,
        const unsigned char* text_bytes,
        int text_len,
        int item_id
    );
    __declspec(dllexport) void __stdcall SetMenuBarPlacement(
        HWND hMenuBar,
        int x, int y, int width, int height
    );
    __declspec(dllexport) void __stdcall SetMenuBarCallback(
        HWND hMenuBar,
        MenuItemClickCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateEmojiPopupMenu(
        HWND hOwner
    );
    __declspec(dllexport) int __stdcall PopupMenuAddItem(
        HWND hPopupMenu,
        const unsigned char* text_bytes,
        int text_len,
        int item_id
    );
    __declspec(dllexport) void __stdcall BindControlMenu(
        HWND hControl,
        HWND hPopupMenu
    );
    __declspec(dllexport) void __stdcall BindButtonMenu(
        HWND hParent,
        int button_id,
        HWND hPopupMenu
    );
    __declspec(dllexport) void __stdcall SetPopupMenuCallback(
        HWND hPopupMenu,
        MenuItemClickCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  
    );
    __declspec(dllexport) HWND __stdcall CreateColorEmojiEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  
    );
    __declspec(dllexport) HWND __stdcall CreateLabel(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  
        BOOL word_wrap  
    );
    __declspec(dllexport) void __stdcall SetLabelText(
        HWND hLabel,
        const unsigned char* text_bytes,
        int text_len
    );
    __declspec(dllexport) HWND __stdcall CreateCheckBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        BOOL checked,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );
    __declspec(dllexport) BOOL __stdcall GetCheckBoxState(
        HWND hCheckBox
    );
    __declspec(dllexport) void __stdcall SetCheckBoxState(
        HWND hCheckBox,
        BOOL checked
    );
    __declspec(dllexport) void __stdcall SetCheckBoxCallback(
        HWND hCheckBox,
        CheckBoxCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateProgressBar(
        HWND hParent,
        int x, int y, int width, int height,
        int initial_value,  
        UINT32 fg_color,
        UINT32 bg_color,
        BOOL show_text,     
        UINT32 text_color   
    );
    __declspec(dllexport) void __stdcall SetProgressValue(
        HWND hProgressBar,
        int value
    );
    __declspec(dllexport) int __stdcall GetProgressValue(
        HWND hProgressBar
    );
    __declspec(dllexport) void __stdcall SetProgressBarCallback(
        HWND hProgressBar,
        ProgressBarCallback callback
    );
    __declspec(dllexport) void __stdcall SetProgressBarShowText(
        HWND hProgressBar,
        BOOL show_text
    );
    __declspec(dllexport) HWND __stdcall CreatePictureBox(
        HWND hParent,
        int x, int y, int width, int height,
        int scale_mode,     
        UINT32 bg_color
    );
    __declspec(dllexport) BOOL __stdcall LoadImageFromMemory(
        HWND hPictureBox,
        const unsigned char* image_data,
        int data_len
    );
    __declspec(dllexport) void __stdcall SetPictureBoxCallback(
        HWND hPictureBox,
        PictureBoxCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateRadioButton(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        int group_id,
        BOOL checked,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );
    __declspec(dllexport) void __stdcall SetRadioButtonCallback(
        HWND hRadioButton,
        RadioButtonCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateListBox(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL multi_select,
        UINT32 fg_color,
        UINT32 bg_color
    );
    __declspec(dllexport) int __stdcall AddListItem(
        HWND hListBox,
        const unsigned char* text_bytes,
        int text_len
    );
    __declspec(dllexport) void __stdcall SetSelectedIndex(
        HWND hListBox,
        int index
    );
    __declspec(dllexport) int __stdcall GetListItemText(
        HWND hListBox,
        int index,
        unsigned char* buffer,
        int buffer_size
    );
    __declspec(dllexport) void __stdcall SetListBoxCallback(
        HWND hListBox,
        ListBoxCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateComboBox(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL readonly,
        UINT32 fg_color,
        UINT32 bg_color,
        int item_height,                        
        const unsigned char* font_name_bytes,  
        int font_name_len,
        int font_size,                          
        BOOL bold,                              
        BOOL italic,                            
        BOOL underline                          
    );
    __declspec(dllexport) int __stdcall AddComboItem(
        HWND hComboBox,
        const unsigned char* text_bytes,
        int text_len
    );
    __declspec(dllexport) void __stdcall SetComboSelectedIndex(
        HWND hComboBox,
        int index
    );
    __declspec(dllexport) void __stdcall SetComboBoxCallback(
        HWND hComboBox,
        ComboBoxCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateD2DComboBox(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL readonly,
        UINT32 fg_color,
        UINT32 bg_color,
        int item_height,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );
    __declspec(dllexport) int __stdcall AddD2DComboItem(
        HWND hComboBox,
        const unsigned char* text_bytes,
        int text_len
    );
    __declspec(dllexport) void __stdcall SetD2DComboSelectedIndex(
        HWND hComboBox,
        int index
    );
    __declspec(dllexport) void __stdcall SetD2DComboBoxCallback(
        HWND hComboBox,
        ComboBoxCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateD2DDateTimePicker(
        HWND hParent,
        int x, int y, int width, int height,
        int initial_precision,
        UINT32 fg_color,
        UINT32 bg_color,
        UINT32 border_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );
    __declspec(dllexport) void __stdcall GetD2DDateTimePickerDateTime(
        HWND hPicker,
        int* year,
        int* month,
        int* day,
        int* hour,
        int* minute,
        int* second
    );
    __declspec(dllexport) void __stdcall SetD2DDateTimePickerDateTime(
        HWND hPicker,
        int year,
        int month,
        int day,
        int hour,
        int minute,
        int second
    );
    __declspec(dllexport) void __stdcall SetD2DDateTimePickerCallback(
        HWND hPicker,
        ValueChangedCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateHotKeyControl(
        HWND hParent,
        int x, int y, int width, int height,
        UINT32 fg_color,
        UINT32 bg_color
    );
    __declspec(dllexport) void __stdcall SetHotKey(
        HWND hHotKey,
        int vk_code,
        int modifiers
    );
    __declspec(dllexport) void __stdcall SetHotKeyCallback(
        HWND hHotKey,
        HotKeyCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateGroupBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* title_bytes,
        int title_len,
        UINT32 border_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );
    __declspec(dllexport) void __stdcall SetGroupBoxTitleColor(
        HWND hGroupBox,
        UINT32 title_color
    );
    __declspec(dllexport) void __stdcall SetGroupBoxStyle(
        HWND hGroupBox,
        int style
    );